--- a/liquidsoap-lang.opam
+++ b/liquidsoap-lang.opam
@@ -37,3 +37,4 @@ build: [
   ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/savonet/liquidsoap.git"
+x-maintenance-intent: ["(latest)"]
