--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
     runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:a9e3ce58f99dd80e06e50239cd51530c451d37e4a8fc6947ebcf7375ef1e41e4
+      image: savonet/liquidsoap-ci:debian_bookworm
       options: --user opam
     env:
       HOME: /home/opam
@@ -67,11 +67,6 @@ jobs:
           git remote set-url origin https://github.com/savonet/liquidsoap.git
           git fetch origin ${{ github.sha }}
           git checkout ${{ github.sha }}
-      - name: Install pandoc
-        run: |
-          cd /tmp
-          git clone https://github.com/smimram/ocaml-pandoc.git
-          opam pin -y add ocaml-pandoc
       - name: Build
         run: |
           echo "::group::Preparing build"
@@ -86,9 +81,7 @@ jobs:
           cp PACKAGES.minimal PACKAGES
           opam update
           opam pin -yn .
-          opam install -y saturn_lockfree.0.5.0 ppx_hash
           opam info -f "depopts:" liquidsoap | grep -v osx-secure-transport | xargs opam remove -y inotify ffmpeg-avutil cohttp-lwt-unix prometheus-app ${{ needs.build_details.outputs.minimal_exclude_deps }}
-          opam install -y mem_usage
           echo "::endgroup::"
           cd liquidsoap
           ./.github/scripts/build-posix.sh "${{ steps.cpu_cores.outputs.count }}"
@@ -102,7 +95,7 @@ jobs:
   build_js:
     runs-on: depot-ubuntu-24.04-4
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:a9e3ce58f99dd80e06e50239cd51530c451d37e4a8fc6947ebcf7375ef1e41e4
+      image: savonet/liquidsoap-ci:debian_bookworm
       options: --user opam
     env:
       HOME: /home/opam
@@ -122,7 +115,6 @@ jobs:
           cd /tmp/liquidsoap-full/liquidsoap
           eval "$(opam config env)"
           opam update
-          opam install -y xml-light saturn_lockfree.0.5.0
           dune build --profile release ./src/js/interactive_js.bc.js
 
   tree_sitter_parse:
@@ -166,7 +158,7 @@ jobs:
     needs: build_details
     if: github.event_name != 'pull_request' && github.repository_owner == 'savonet' && needs.build_details.outputs.branch == 'main'
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:a9e3ce58f99dd80e06e50239cd51530c451d37e4a8fc6947ebcf7375ef1e41e4
+      image: savonet/liquidsoap-ci:debian_bookworm
       options: --user root -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
     env:
       HOME: /home/opam
@@ -185,11 +177,6 @@ jobs:
         run: |
           apt-get update
           apt-get install -y npm
-      - name: Install pandoc
-        run: |
-          cd /tmp
-          sudo -u opam -E git clone https://github.com/smimram/ocaml-pandoc.git
-          sudo -u opam -E opam pin -y add ocaml-pandoc
       - name: Build doc
         env:
           CPU_CORES: ${{ steps.cpu_cores.outputs.count }}
@@ -231,7 +218,7 @@ jobs:
     runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
-      image: savonet/liquidsoap-ci:debian_bookworm@sha256:a9e3ce58f99dd80e06e50239cd51530c451d37e4a8fc6947ebcf7375ef1e41e4
+      image: savonet/liquidsoap-ci:debian_bookworm
       options: --user root --privileged --ulimit core=-1 --security-opt seccomp=unconfined -v ${{ github.workspace }}/${{ github.run_number }}:/tmp/${{ github.run_number }}
     strategy:
       fail-fast: false
@@ -256,20 +243,6 @@ jobs:
           sudo -u opam -E git remote set-url origin https://github.com/savonet/liquidsoap.git
           sudo -u opam -E git fetch origin ${{ github.sha }}
           sudo -u opam -E git checkout ${{ github.sha }}
-      - name: Install sqlite
-        run: |
-          sudo apt-get -y update
-          sudo apt-get -y install libsqlite3-dev
-          sudo -u opam -E opam install -y sqlite3
-      - name: Install pandoc
-        run: |
-          cd /tmp
-          if [ ! -d ocaml-pandoc ]; then
-            mkdir -p ocaml-pandoc;
-            chown -R opam ocaml-pandoc;
-            sudo -u opam -E git clone https://github.com/smimram/ocaml-pandoc.git ocaml-pandoc
-          fi
-          sudo -u opam -E opam pin -y add ocaml-pandoc
       - name: Build
         env:
           CPU_CORES: ${{ steps.cpu_cores.outputs.count }}
@@ -288,7 +261,6 @@ jobs:
         run: |
           apt-get -y update
           apt-get -y install frei0r-plugins
-          sudo -u opam -E opam install -y prometheus-liquidsoap
       - name: Run tests
         env:
           CPU_CORES: ${{ steps.cpu_cores.outputs.count }}
@@ -406,27 +378,6 @@ jobs:
           sudo -u opam -E git remote set-url origin https://github.com/savonet/liquidsoap.git
           sudo -u opam -E git fetch origin ${{ github.sha }}
           sudo -u opam -E git checkout ${{ github.sha }}
-      - name: Update debian packages
-        if: contains(matrix.os, 'debian') || contains(matrix.os, 'ubuntu')
-        run: |
-          echo "opam hold" | sudo dpkg --set-selections
-          sudo apt-get update
-          sudo apt-get -y dist-upgrade
-          sudo apt-get -y autoremove
-          sudo apt-get -y install libsqlite3-dev
-      - name: Update alpine packages
-        if: matrix.os == 'alpine'
-        run: |
-          apk -U --force-overwrite upgrade
-          apk add -i sqlite-dev
-      - name: Install additional libraries
-        run: |
-          sudo -u opam -E opam install -y sqlite3
-      - name: Install pandoc
-        run: |
-          cd /tmp
-          sudo -u opam -E git clone https://github.com/smimram/ocaml-pandoc.git ocaml-pandoc
-          sudo -u opam -E opam pin -y add ocaml-pandoc
       - name: Build
         run: |
           cd /tmp/liquidsoap-full/liquidsoap
@@ -503,7 +454,7 @@ jobs:
           path: ${{ github.workspace }}/${{ github.run_number }}/s3-artifacts
 
   build_win32:
-    runs-on: depot-ubuntu-22.04-4
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     strategy:
       fail-fast: false
@@ -553,7 +504,7 @@ jobs:
           rm -rf /tmp/${{ github.run_number }}/win32
 
   update_release:
-    runs-on: depot-ubuntu-22.04-4
+    runs-on: depot-ubuntu-24.04-4
     needs:
       [
         build_details,
