--- a/liquidsoap.opam
+++ b/liquidsoap.opam
@@ -100,6 +100,7 @@ conflicts: [
   "lo" {< "0.2.0"}
   "mad" {< "0.5.0"}
   "magic" {< "0.6"}
+  "mirage-crypto-rng" {< "0.6.2"}
   "ogg" {< "1.0.0"}
   "opus" {< "0.2.0"}
   "portaudio" {< "0.2.0"}
