--- a/liquidsoap.opam
+++ b/liquidsoap.opam
@@ -102,6 +102,7 @@ conflicts: [
   "magic" {< "0.6"}
   "ogg" {< "1.0.0"}
   "opus" {< "0.2.0"}
+  "odoc" {< "3.0.0~beta1"}
   "portaudio" {< "0.2.0"}
   "posix-time2" {< "2.0.2"}
   "posix-socket" {< "2.1.0"}
