--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ concurrency:
 
 jobs:
   build_details:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     outputs:
       branch: ${{ steps.build_details.outputs.branch }}
       sha: ${{ steps.build_details.outputs.sha }}
@@ -51,7 +51,7 @@ jobs:
         id: build_details
 
   build_no_depopts:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
       image: savonet/liquidsoap-ci:debian_bookworm@sha256:c335eb95e0af0f177b790cbe74d3d7eff68546c05c57efe4042b4b4d105dff1a
@@ -95,7 +95,7 @@ jobs:
           ./.github/scripts/build-doc.sh
 
   build_js:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     container:
       image: savonet/liquidsoap-ci:debian_bookworm@sha256:c335eb95e0af0f177b790cbe74d3d7eff68546c05c57efe4042b4b4d105dff1a
       options: --user opam
@@ -120,7 +120,7 @@ jobs:
           dune build --profile release ./src/js/interactive_js.bc.js
 
   tree_sitter_parse:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     steps:
       - name: Checkout latest code
@@ -137,7 +137,7 @@ jobs:
           npm exec tree-sitter -- parse -q -s ../../**/*.liq
 
   lezer_parse:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     steps:
       - name: Checkout latest code
@@ -156,7 +156,7 @@ jobs:
           npm exec liquidsoap-lezer-print-tree -- -q ../../**/*.liq
 
   update_doc:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     if: github.event_name != 'pull_request' && github.repository_owner == 'savonet' && needs.build_details.outputs.branch == 'main'
     container:
@@ -217,7 +217,7 @@ jobs:
           GH_PAT: ${{ secrets.WEBSITE_TOKEN }}
 
   run_tests:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     container:
       image: savonet/liquidsoap-ci:debian_bookworm@sha256:c335eb95e0af0f177b790cbe74d3d7eff68546c05c57efe4042b4b4d105dff1a
@@ -313,7 +313,7 @@ jobs:
           rm -rf /tmp/${{ github.run_number }}/core
 
   build_opam:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     strategy:
       fail-fast: false
       matrix:
@@ -433,7 +433,7 @@ jobs:
           rm -rf /tmp/${{ github.run_number }}/${{ matrix.os }}_${{ matrix.platform }}
 
   fetch_s3_artifacts:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: [build_details, build_posix]
     steps:
       - name: Prepare directory
@@ -456,7 +456,7 @@ jobs:
           path: ${{ github.workspace }}/${{ github.run_number }}/s3-artifacts
 
   build_win32:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: build_details
     strategy:
       fail-fast: false
@@ -506,7 +506,7 @@ jobs:
           rm -rf /tmp/${{ github.run_number }}/win32
 
   update_release:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs:
       [
         build_details,
@@ -783,7 +783,7 @@ jobs:
           sbom: false
 
   build_docker_release:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs: [build_details, run_tests, build_docker, build_docker_alpine]
     if: needs.build_details.outputs.docker_release
     steps:
@@ -793,7 +793,7 @@ jobs:
         run: .github/scripts/push-docker.sh ${{ needs.build_details.outputs.branch }} ${{ secrets.DOCKERHUB_USER }} ${{ secrets.DOCKERHUB_PASSWORD }} ${{ github.actor }} ${{ secrets.GITHUB_TOKEN }} ${{ github.sha }}
 
   build_docker_release-minimal:
-    runs-on: ubuntu-24.04
+    runs-on: depot-ubuntu-24.04-4
     needs:
       [
         build_details,
