Add prometheus to windows build!

--- a/.github/opam/liquidsoap-windows.opam
+++ b/.github/opam/liquidsoap-windows.opam
@@ -30,6 +30,10 @@ depends: [
   "magic-mime-windows"
   "menhir"
   "menhirLib-windows"
+  "prometheus-app"
+  "prometheus-app-windows"
+  "cohttp-lwt-unix"
+  "cohttp-lwt-unix-windows"
   "uri"
   "uri-windows"
   "fileutils"
