Add mutex-protected stdlib override for atomic for pre-ocaml 5.

--- a/src/lang/dune
+++ b/src/lang/dune
@@ -88,6 +88,7 @@
   (pps sedlex.ppx ppx_string ppx_hash))
  (libraries
   liquidsoap-lang.console
+  liquidsoap-lang.custom-stdlib
   dune-site
   re
   str
