--- a/liquidsoap-mode.opam
+++ b/liquidsoap-mode.opam
@@ -8,7 +8,7 @@ license: "GPL-2.0-or-later"
 homepage: "https://github.com/savonet/liquidsoap"
 bug-reports: "https://github.com/savonet/liquidsoap/issues"
 depends: [
-  "dune" {>= "3.6"}
+  "dune" {>= "3.18"}
   "liquidsoap" {= version}
   "odoc" {with-doc}
 ]
@@ -29,6 +29,7 @@ build: [
   ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/savonet/liquidsoap.git"
+x-maintenance-intent: ["(latest)"]
 post-messages: [
   "This package requires additional configuration for use in editors. Install package 'user-setup', or manually:
 
