--- a/tls-liquidsoap.opam
+++ b/tls-liquidsoap.opam
@@ -9,7 +9,7 @@ license: "GPL-2.0-or-later"
 homepage: "https://github.com/savonet/liquidsoap"
 bug-reports: "https://github.com/savonet/liquidsoap/issues"
 depends: [
-  "dune" {>= "3.6"}
+  "dune" {>= "3.18"}
   "tls"
   "ca-certs"
   "mirage-crypto-rng"
@@ -33,3 +33,4 @@ build: [
   ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/savonet/liquidsoap.git"
+x-maintenance-intent: ["(latest)"]
