Fix docker release push.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -831,7 +831,7 @@ jobs:
           GHCR_USER: ${{ github.actor }}
           GHCR_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_SHA: ${{ github.sha }}
-          OCAML_DOCKER_RELEASE_VERSION: ${{ needs.build_details.outputs.ocaml_version }}
+          OCAML_DOCKER_RELEASE_VERSION: ocaml${{ needs.build_details.outputs.ocaml_version }}
         run: .github/scripts/push-docker.sh
 
   build_docker_release-minimal:
