Split json into its own module.

--- a/src/lang/dune
+++ b/src/lang/dune
@@ -13,7 +13,7 @@
  (sites liquidsoap-lang))
 
 (menhir
- (modules parser json_parser)
+ (modules parser)
  (flags
   --unused-token
   NULLDOT
@@ -92,6 +92,7 @@
   liquidsoap-lang.console
   dune-site
   fileutils
+  liquidsoap_json
   re
   str
   unix
@@ -126,9 +127,6 @@
   extralib
   flags
   hooks
-  json_base
-  json_lexer
-  json_parser
   json
   lang
   lang_core
