--- a/src/modules/cron/dune
+++ b/src/modules/cron/dune
@@ -7,13 +7,10 @@
    (:standard -w -9))))
 
 (menhir
- (modules cron_parser))
+ (modules parser))
 
 (library
  (name cron)
- (modules cron cron_base cron_parser cron_lexer)
- (private_modules cron_base cron_parser cron_lexer)
- (wrapped false)
  (libraries menhirLib unix)
  (preprocess
   (pps sedlex.ppx))
