Add tail rec list map and mapi.

--- a/src/lang/dune
+++ b/src/lang/dune
@@ -90,6 +90,7 @@
   (pps sedlex.ppx ppx_string ppx_hash))
  (libraries
   liquidsoap-lang.console
+  liquidsoap-lang.stdlib
   dune-site
   fileutils
   re
